refactor: add pseudo element in header

--- a/singolo1.html
+++ b/singolo1.html
@@ -39,17 +39,21 @@
       <div class="container">
         <div class='slider__inner'>
           <div class="slider__btn">
-            <button class="slider__btn-prev" type="button"><span class="visually-hidden">Шаг назад</span></button>
-            <button class="slider__btn-next" type="button"><span class="visually-hidden">Шаг вперед</span></button>
-        </div>
-        <div class="slider__phone">
-          <div class="slider__phone--vertical">
-            <img src="assets/img/vertical-phone.png" alt="iPhone Vertical">
+            <button class="slider__btn-prev" type="button">
+              <span class="visually-hidden">Шаг назад</span>
+            </button>
+            <div class="slider__phone">
+              <div class="slider__phone--vertical">
+                <img src="assets/img/vertical-phone.png" alt="iPhone Vertical">
+              </div>
+              <div class="slider__phone--horizontal">
+                <img src="assets/img/horizontal-phone.png" alt="iPhone Horizontal">
+              </div>
+            </div>
+            <button class="slider__btn-next" type="button">
+              <span class="visually-hidden">Шаг вперед</span>
+            </button>
           </div>
-          <div class="slider__phone--horizontal">
-            <img src="assets/img/horizontal-phone.png" alt="iPhone Horizontal">
-          </div>
-        </div>
         </div>
       </div>
     </section>
