--- a/singolo1.html
+++ b/singolo1.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Singolo</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="singolo1.css">
 </head>
@@ -13,11 +14,11 @@
     <h1 class="visually-hidden">Singolo digital agency</h1>
     <nav class="menu container">
       <div class="logo">
-        <p class="logo__heading">Singolo<sup class="star">*</sup></p>
+        <p class="logo__heading">Singolo<span class="star">*</span></p>
       </div>
       <ul class="header__list">
         <li class="header__item">
-          <a href="#" class="header__link">Home</a>
+          <a href="#" class="header__link header__link--current">Home</a>
         </li>
         <li class="header__item">
           <a href="#" class="header__link">Services</a>
