--- a/singolo1.html
+++ b/singolo1.html
@@ -14,7 +14,9 @@
     <h1 class="visually-hidden">Singolo digital agency</h1>
     <nav class="menu container">
       <div class="logo">
-        <p class="logo__heading">Singolo<span class="star">*</span></p>
+        <p class="logo__heading">
+          <a href=singolo1.html class="logo__link">Singolo</a>
+          <span class="star">*</span></p>
       </div>
       <ul class="header__list">
         <li class="header__item">
