refactor: apply PP

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="menu container">
       <div class="logo">
         <p class="logo__heading">
-          <a href=singolo1.html class="logo__link">Singolo</a>
+          <a href=index.html class="logo__link">Singolo</a>
           <span class="star">*</span></p>
       </div>
       <ul class="header__list">
