--- a/index.html
+++ b/index.html
@@ -254,10 +254,17 @@
               <input class="contact__input" type="text" name="subject" id="subject" placeholder="Subject">
               <textarea class="contact__line" name="question" id="desc" placeholder="Describe your project in detail..."></textarea>
               <div class="contact__button">
-                <button type="submit" id="say" class="button button_send">Submit</button>
+                <button type="submit" id="myBtn" class="button button_send">Submit</button>
               </div>
-              <div id="result"></div>
             </form>
+            <div id="myModal" class="modal">
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <div id="result"></div>
+            </div>
+          </div>
+
           </div>
           <div class="contact__content">
             <h3 class="contact__title">Contact Information</h3>
