feat: pp 768px and 1020px

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               <input class="contact__input" type="text" name="subject" id="subject" placeholder="Subject">
               <textarea class="contact__line" name="question" id="desc" placeholder="Describe your project in detail..."></textarea>
               <div class="contact__button">
-                <button type="submit" id="myBtn" class="button button_send">Submit</button>
+                <button type="submit" id="myBtn" class="button button_send">Send</button>
               </div>
             </form>
         <!-- Modal content -->
