--- a/index.html
+++ b/index.html
@@ -11,31 +11,33 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="visually-hidden">Singolo digital agency</h1>
-    <nav class="menu container">
-      <div class="logo">
-        <p class="logo__heading">
-          <span class="logo__link">Singolo</span>
-          <span class="star">*</span></p>
-      </div>
-      <input id="menu__toggle" type="checkbox" />
-      <label class="menu__btn" for="menu__toggle">
-        <span></span>
-      </label>
-      <ul class="header__list">
-        <li class="mobile-logo">
-          <div class="logo">
+    <!-- <div class="container"> -->
+      <nav class="menu container">
+        <div class="logo">
           <p class="logo__heading">
-          <span class="logo__link">Singolo</span>
-          <span class="star">*</span></p>
-        </li>
-        <li><a class="link-current" href="#home">Home</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+            <span class="logo__link">Singolo</span>
+            <span class="star">*</span></p>
+        </div>
+        <input id="menu__toggle" type="checkbox" />
+        <label class="menu__btn" for="menu__toggle">
+          <span></span>
+        </label>
+        <ul class="header__list">
+          <li class="mobile-logo">
+            <div class="logo">
+            <p class="logo__heading">
+            <span class="logo__link">Singolo</span>
+            <span class="star">*</span></p>
+          </li>
+          <li><a class="link-current" href="#home">Home</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <h1 class="visually-hidden">Singolo digital agency</h1>
+    <!-- </div> -->
   </header>
 
 
@@ -118,7 +120,7 @@
         <div class="preview-set">
           <ul class="layout-4-column">
             <li class="preview-item">
-              <img src="./assets/img/img1.png" id="image" class="preview__img" alt="Предварительный просмотр работы">
+              <img src="./assets/img/img1.png" id="image" class="preview__img" width="220" height="187" alt="Предварительный просмотр работы">
             </li>
             <li class="preview-item">
               <img src="./assets/img/img2.png" id="image" class="preview__img" alt="Предварительный просмотр работы">
